# positionoracle

./: .env.example  .gitignore  .python-version  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  ruff.toml
deploy/: nginx.conf
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: GexChart.svelte  api.ts  greek-signals.ts  tooltip.ts  webauthn.ts  ws.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
positionoracle/: advisor.py  api_keys.py  api_models.py  auth.py  beta.py  claude_advisor.py  config.py  db.py  flex.py  fred.py  gex.py  greeks.py  main.py  massive.py  mcp_server.py  oauth.py  planner.py  types.py  vrp.py  ws.py
tests/: conftest.py  test_advisor.py  test_api_keys.py  test_api_routes.py  test_auth.py  test_claude_advisor.py  test_config.py  test_db.py  test_flex.py  test_fred.py  test_greeks.py  test_greeks_massive.py  test_massive.py  test_planner.py  test_pnl_pct.py  test_routes.py  test_vrp.py  test_ws.py
